--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@types/webpack-dev-server": "3.10.1",
     "@typescript-eslint/eslint-plugin": "2.31.0",
     "@typescript-eslint/parser": "2.31.0",
+    "css-loader": "^3.5.3",
     "eslint": "7.0.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-import": "2.20.2",
@@ -29,6 +30,9 @@
     "fork-ts-checker-webpack-plugin": "4.1.3",
     "html-webpack-plugin": "4.3.0",
     "prettier": "2.0.5",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.1",
     "ts-loader": "7.0.4",
     "ts-node": "8.10.1",
     "typescript": "3.8.3",
