--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,20 @@
   "scripts": {
     "start": "webpack-dev-server --mode development --env.development --open --hot --progress",
     "build": "webpack --mode production --env.production --progress",
+    "test": "jest",
     "lint": "eslint './src/**/*.{ts,tsx}'",
     "prettier": "prettier --write '**/*.{ts,js,css,html,tsx}'",
     "lint:fix": "eslint './src/**/*.{ts,tsx}' --fix"
   },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(css|less|scss)$": "identity-obj-proxy"
+    }
+  },
   "devDependencies": {
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "@testing-library/react": "^10.0.4",
     "@types/node": "13.13.5",
     "@types/react": "16.9.35",
     "@types/react-dom": "16.9.8",
@@ -21,7 +30,9 @@
     "@types/webpack-dev-server": "3.10.1",
     "@typescript-eslint/eslint-plugin": "2.31.0",
     "@typescript-eslint/parser": "2.31.0",
+    "babel-jest": "^26.0.1",
     "css-loader": "^3.5.3",
+    "enzyme": "^3.11.0",
     "eslint": "7.0.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-import": "2.20.2",
@@ -30,7 +41,10 @@
     "eslint-plugin-react-hooks": "4.0.1",
     "fork-ts-checker-webpack-plugin": "4.1.3",
     "html-webpack-plugin": "4.3.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.0.1",
     "prettier": "2.0.5",
+    "react-test-renderer": "^16.13.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
