--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,8 @@
   },
   "devDependencies": {
     "@testing-library/react": "^10.0.4",
-    "@types/jest": "^25.2.3",
     "@types/classnames": "^2.2.10",
+    "@types/jest": "^25.2.3",
     "@types/node": "13.13.5",
     "@types/react": "16.9.35",
     "@types/react-dom": "16.9.8",
@@ -53,9 +53,11 @@
     "webpack-dev-server": "3.11.0"
   },
   "dependencies": {
+    "@types/socket.io-client": "^1.4.33",
     "classnames": "^2.2.6",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "socket.io-client": "^2.3.0"
   },
   "husky": {
     "hooks": {
