--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,6 @@
     "@types/webpack-dev-server": "3.10.1",
     "@typescript-eslint/eslint-plugin": "2.31.0",
     "@typescript-eslint/parser": "2.31.0",
-    "babel-jest": "^26.0.1",
     "css-loader": "^3.5.3",
     "enzyme": "^3.11.0",
     "eslint": "7.0.0",
@@ -35,8 +34,10 @@
     "eslint-plugin-react-hooks": "4.0.1",
     "fork-ts-checker-webpack-plugin": "4.1.3",
     "html-webpack-plugin": "4.3.0",
+    "husky": "^4.2.5",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.0.1",
+    "lint-staged": "^10.2.6",
     "prettier": "2.0.5",
     "react-test-renderer": "^16.13.1",
     "sass": "^1.26.5",
@@ -53,5 +54,10 @@
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
