--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -28,6 +28,7 @@
   "rules": {
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/no-empty-function": "off",
     "react/jsx-filename-extension": [
       "warn",
       {
@@ -38,7 +39,7 @@
     ],
     "react/prop-types": "off",
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn"
+    "react-hooks/exhaustive-deps": "warn",
   },
   "settings": {
     "react": {
