--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@testing-library/react": "^10.0.4",
     "@types/jest": "^25.2.3",
+    "@types/classnames": "^2.2.10",
     "@types/node": "13.13.5",
     "@types/react": "16.9.35",
     "@types/react-dom": "16.9.8",
@@ -52,6 +53,7 @@
     "webpack-dev-server": "3.11.0"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
