--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,15 +14,9 @@
     "prettier": "prettier --write '**/*.{ts,js,css,html,tsx}'",
     "lint:fix": "eslint './src/**/*.{ts,tsx}' --fix"
   },
-  "jest": {
-    "moduleNameMapper": {
-      "\\.(css|less|scss)$": "identity-obj-proxy"
-    }
-  },
   "devDependencies": {
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.9.4",
     "@testing-library/react": "^10.0.4",
+    "@types/jest": "^25.2.3",
     "@types/node": "13.13.5",
     "@types/react": "16.9.35",
     "@types/react-dom": "16.9.8",
@@ -48,9 +42,10 @@
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
+    "ts-jest": "^26.0.0",
     "ts-loader": "7.0.4",
     "ts-node": "8.10.1",
-    "typescript": "3.8.3",
+    "typescript": "^3.9.3",
     "webpack": "4.43.0",
     "webpack-cli": "3.3.11",
     "webpack-dev-server": "3.11.0"
