--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "tsc": "tsc && node index.js"
+    "start": "tsc && node index.js"
   },
   "dependencies": {
     "@types/express": "^4.17.6",
+    "@types/socket.io": "^2.1.8",
     "express": "^4.17.1",
+    "socket.io": "^2.3.0",
     "typescript": "^3.9.3"
   }
 }
