--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,10 +54,12 @@
   },
   "dependencies": {
     "@types/socket.io-client": "^1.4.33",
+    "@types/uuid": "^8.0.0",
     "classnames": "^2.2.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "uuid": "^8.1.0"
   },
   "husky": {
     "hooks": {
