--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -27,7 +27,7 @@
   },
   "rules": {
     "@typescript-eslint/explicit-function-return-type": "off",
-    "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": "error",
     "@typescript-eslint/no-empty-function": "off",
     "react/jsx-filename-extension": [
       "warn",
