refactor Navbar. Change dir structure.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "build": "webpack --mode production --env.production --progress",
     "build:klockConsulting": "webpack --mode production --env.production --progress --env.backendUrl=klockconsulting.net",
     "test": "jest",
+    "test:watch": "jest --watchAll",
     "lint": "eslint './src/**/*.{ts,tsx}'",
     "prettier": "prettier --write '**/*.{ts,js,css,html,tsx}'",
     "lint:fix": "eslint './src/**/*.{ts,tsx}' --fix"
