--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,11 +55,13 @@
     "webpack-dev-server": "3.11.0"
   },
   "dependencies": {
+    "@types/react-linkify": "^1.0.0",
     "@types/socket.io-client": "^1.4.33",
     "@types/uuid": "^8.0.0",
     "classnames": "^2.2.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-linkify": "^1.0.0-alpha",
     "socket.io-client": "^2.3.0",
     "uuid": "^8.1.0"
   },
